# cmake-cpp-examples

CGFSoldiersGrid/: CMakeLists.txt  Grid.cpp  Grid.h  Side.h  Soldier.cpp  Soldier.h  Vector2D.cpp  Vector2D.h  main.cpp
ConsoleDroneControl/: CMakeLists.txt  Drone.cpp  Drone.h  Grid.cpp  Grid.h  Hunter.cpp  Hunter.h  README.md  Vector2D.cpp  Vector2D.h  Wolverine.cpp  Wolverine.h  main.cpp
Memo/: CMakeLists.txt  MemoChoice.h  MemoStore.cpp  MemoStore.h  main.cpp
